# file_deploy

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: rust.yml
proto/: file_deploy.proto
src/: client.rs  data_define.rs  lib.rs  main.rs  server.rs
src/client/: connection.rs
src/server/: config.rs  session.rs
test_certs/: server.crt  server.csr  server.key
