[package]
name = "file_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
rustls-pki-types = "1.12.0"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
x509-parser = "0.18.0"
