[package]
name = "file_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.47", features = ["derive"] }
crc32c = "0.6.8"
lazy_static = "1.5.0"
prost = "0.14.1"
rustls-pki-types = { version = "1.12.0", features = ["std"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.2"
x509-parser = "0.18.0"

[build-dependencies]
prost-build = "0.14.1"
